added body content

--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
         </nav>          
     </header>
 
+    <section>Hero Image here</section>
+    
     <section>
         <h2>Introduction</h2>
         <p>This paragraph will be an introduction to fish keeping</p>
     </section>
+
     <section><h2>What you need to get started</h2>
         This section will have a small prargraph explaining what is needed, then also a list element showing the items that are needed and a little bit of infomration to go along with each item
     </section>
-    <section><h2>Nitrogen Cycle</h2></section>
 
-    <footer>Social Media links + Newsletter</footer> 
+    <section><h2>Nitrogen Cycle</h2>
+        <p>This will have an image of the nitrogen cycle and the also paragraphs explaining each step of the nitrogen cycle</p>
+    </section>
+
+    <footer>Social Media links (Facebook, Instagram and Twitter) + Sign for a Newsletter</footer> 
 
     
 </body>
