add image to website

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 id="Title">Keeping Fish Simple</h1>
-                   
+        <h1 id="Title">Keeping Fish Simple</h1>                   
         <nav>
             <ul id="menu">
                 <li><a href="#">Plants</a></li>                
@@ -22,7 +21,9 @@
         </nav>          
     </header>
 
-    <section>Hero Image here</section>
+    <section>
+        <div id="hero-image"></div>       
+    </section>
 
     <section>
         <h2>Introduction</h2>
@@ -31,7 +32,15 @@
 
     <section>
         <h2>What you need to get started</h2>
-        This section will have a small prargraph explaining what is needed, then also a list element showing the items that are needed and a little bit of infomration to go along with each item
+        <p>This section will have a small prargraph explaining what is needed,</p>
+        <ul>
+            <li>Choosing the location of the tank</li>
+            <li>Cleaning equipment</li>
+            <li>Tank</li>
+            <li>Filter</li>
+            <li>Heater</li>
+            <li>Substrate and Decorations</li>
+        </ul>
     </section>
 
     <section>
