--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tropcial fish keeping webaite for beginners">
+    <meta name="description" content="Tropical fish keeping website for beginners">
     <meta name="keywords" content= "fish, tropical fish, aquarium, aquarium plants">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Keeping Fish Simple</title>
@@ -27,7 +27,7 @@
 
     <section>
         <h2>Introduction</h2>
-        <p>In This page I am going to outline what is needed to set up your very first tropical freshwater aquarium. Throughout this website we will go though the what is needed when setting up your very first freshwater tropical aquarium. We will got throught the equipment that is needed, the best fish for begginers, so you have the best chance of success and also some plants that are not only great for begginers but are also benifical to your aquarium. So lets fist take a look at what you might need to set up your very first aquarium.</p>
+        <p>In This page I am going to outline what is needed to set up your very first tropical freshwater aquarium. Throughout this website we will go through the what is needed when setting up your very first freshwater tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have the best chance of success and also some plants that are not only great for beginners but are also beneficial to your aquarium. So let’s fist take a look at what you might need to set up your very first aquarium.</p>
     </section>
 
     <section>
@@ -40,27 +40,27 @@
         </div>
         <div>
             <h2>Cleaning/Maintence equipment</h2>
-            <p>Having cleaning and Maintence equipment will make you job as a fish keeper much much easier. We recomend having a gravel syphon, glass cleaner (sponge or magentic), net and a algae remover.</p>
+            <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
         <div>
             <h2>Tank (bigger is better)</h2>
-            <p>Despite what you might think, having a bigger aquarium is more easier to care for than smaller one. The more volume of water you have, the easier it is to maintain and balance your aquarium enviroment. We recomend at lwast 20 gallons (75 liters)</p>
+            <p>Despite what you might think, having a bigger aquarium is easier to care for than smaller one. The more volume of water you have, the easier it is to maintain and balance your aquarium environment. We recommend at least 20 gallons (75 litters)</p>
         </div>
         <div>
             <h2>Filter</h2>
-            <p>The filter is an important part of keeping a healty aquarium. This will help clean your water and filter out the fish waste and debris. We recomend either a hang on back filter or internal filter. Just make sure that which ever filter you choose that it is suffiecent enough to deal with the volume of water you have in your aquarium.</p>
+            <p>The filter is an important part of keeping a healthy aquarium. This will help clean your water and filter out the fish waste and debris. We recommend either a hang on back filter or internal filter. Just make sure that whichever filter you choose that it is sufficient enough to deal with the volume of water you have in your aquarium.</p>
         </div>
         <div>
             <h2>Heater and Thermometer</h2>
-            <p>Fish can't produce their own body heat, so its important to keep them at their ideal temperature with a heater. Its also advise to have a thermometer, this will help you keep track on the temperature of the water.</p>
+            <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a heater. It’s also advise to have a thermometer, this will help you keep track on the temperature of the water.</p>
         </div>
         <div>
             <h2>Lighting</h2>
-            <p>If your aquarium comes with an built in light, that great!. Just remeber to have you light on between 8-12 hours per day. Once you get more comfortable with your aquarium, maybe think of upgrading your light. Now, you can get lights with timers and adjustable lighting.</p>
+            <p>If your aquarium comes with a built in light, that great! Just remember to have you light on between 8-12 hours per day. Once you get more comfortable with your aquarium, maybe think of upgrading your light. Now, you can get lights with timers and adjustable lighting.</p>
         </div>
         <div>
             <h2>Substrate</h2>
-            <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great place for benifical bacteria to live, it also makes you aquarium look more aesthetically pleasing.</p>
+            <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great place for beneficial bacteria to live, it also makes you aquarium look more aesthetically pleasing.</p>
         </div>               
       
         
