add social media links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1 id="Title">Keeping Fish Simple</h1>                   
         <nav>
             <ul id="menu">
-                <li><a href="#">Plants</a></li>                
-                <li><a href="#">Fish</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="plants.html">Plants</a></li>                
+                <li><a href="fish.html">Fish</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>          
     </header>
@@ -70,7 +70,11 @@
         <p>Pro tip, to test the water we recommend getting <a href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
     </section>
 
-    <footer>Social Media links (Facebook, Instagram and Twitter) + Sign up for a Newsletter</footer> 
+    <footer>Social Media links (Facebook, Instagram and Twitter) + Sign up for a Newsletter
+        <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
+        <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
+        <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+    </footer> 
     
 </body>
 </html>
