--- a/fish.html
+++ b/fish.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fish</h1>
+    <h1>Choosing your fish</h1>
+    <p>
+        Selecting your fish for your new aquarium id ther most exciting part of setting up a new tank. However, for begginers the choice can be overwhelming, as there are so many choices to choose from and not ever fish can live peacefully together. To help you throught his we have set a a list of fish that we think is great for begginers.
+    </p>
+    
 </body>
 </html>
