add layout and content to fish tab

--- a/fish.html
+++ b/fish.html
@@ -9,8 +9,147 @@
 <body>
     <h1>Choosing your fish</h1>
     <p>
-        Selecting your fish for your new aquarium id ther most exciting part of setting up a new tank. However, for begginers the choice can be overwhelming, as there are so many choices to choose from and not ever fish can live peacefully together. To help you throught his we have set a a list of fish that we think is great for begginers.
+        Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can live peacefully together. To help you through this selction process, we have set out a list of fish that we think is great for begginers.
     </p>
     
+    <h1>Center Piece Fish</h1>
+    <h2>Angelfish</h2>
+    <img src="..assets/images/Angelfish.jpg" alt="Angelfish">
+    <table>
+        <tr>
+            <th>Tank Size</th>
+            <th>Water temperature</th>
+            <th>Temperament</th>
+            <th>Diet</th>
+        </tr>
+        <tr>
+            <td>20 gallons</td>
+            <td>24°C-28°C</td>
+            <td>Semi-Aggressive</td>
+            <td>Omnivore</td>
+        </tr>
+    </table>
+
+    <h2>Honey Gourami</h2>
+<img src="..assets/images/Honey Gourami.jpg" alt="Honey Gourami fish">
+    <table>
+    <tr>
+        <th>Tank Size</th>
+        <th>Water temperature</th>
+        <th>Temperament</th>
+        <th>Diet</th>
+    </tr>
+    <tr>
+        <td>10 gallons</td>
+        <td>24°C-28°C</td>
+        <td>Peaceful</td>
+        <td>Omnivore</td>
+    </tr>
+</table>
+
+<h2>Betta</h2>
+<img src="..assets/images/Betta.jpg" alt="Betta fish">
+<table>
+    <tr>
+        <th>Tank Size</th>
+        <th>Water temperature</th>
+        <th>Temperament</th>
+        <th>Diet</th>
+    </tr>
+    <tr>
+        <td>10 gallons</td>
+        <td>23°C-29°C</td>
+        <td>Semi-Aggressive</td>
+        <td>Carnivore</td>
+    </tr>
+</table>
+
+    <h2>Schooling Fish</h2>
+
+    <h2>Rummy Nose Tetra</h2>
+<img src="..assets/images/Rummy Nose tetra.jpg" alt="Rummy Nose Tetra Fish">
+<table>
+    <tr>
+        <th>Tank Size</th>
+        <th>Water temperature</th>
+        <th>Temperament</th>
+        <th>Diet</th>
+    </tr>
+    <tr>
+        <td>20 gallons</td>
+        <td>23°C-29°C</td>
+        <td>Peaceful</td>
+        <td>Omnivore</td>
+    </tr>
+
+</table>
+
+    <h2>Cherry Barb</h2>
+ <img src="..assets/images/Cherry Barb.jpg" alt="Cherry Barb Fish">
+
+<table>
+<tr>
+    <th>Tank Size</th>
+    <th>Water temperature</th>
+    <th>Temperament</th>
+    <th>Diet</th>
+</tr>
+<tr>
+    <td>20 gallons</td>
+    <td>23°C-26°C</td>
+    <td>Peaceful</td>
+    <td>Omnivore</td>
+</tr>
+</table>
+
+<h2>Ember Tetra</h2>
+<img src="..assets/images/Ember tetra.jpg" alt="Ember Tetra fish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>10 gallons</td>
+   <td>23°C-26°C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
+
+<h2>Neon Tetra</h2>
+<img src="..assets/images/Neon Tetra.jpg" alt="Neon Tetra Fish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>10 gallons</td>
+   <td>23–29 C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
+
+
+    <footer>
+        <form>
+            <h5>Sign up for our Weekly NewsLetter</h5>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last Name:</label><br>
+            <input type="text" id="lname" name="lname"><br>
+        </form>
+        <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
+        <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
+        <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+    </footer> 
 </body>
 </html>
