--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
         <p>The Nitrogen Cyccle is a very importnat part when starting your aquarium. The basics of the Nitrogen Cycle is the procees where the ammonia (which is extremely toxic to fish) produced from fish waste and uneaten food is broken dowen to Nitrite and further again to Nitrates (which is removed with water changes)</p>
         <div>Nitrogen Cycle Image</div>
         <p>Pro tip, to test the water we recommend getting <a href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
+        <br>
     </section>
 
-    <footer>Social Media links (Facebook, Instagram and Twitter) + Sign up for a Newsletter
+    <footer>
+
+        <form>
+            <h5>Sign up for our Weekly NewsLetter</h5>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last Name:</label><br>
+            <input type="text" id="lname" name="lname"><br>
+        </form>
         <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
         <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
         <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
