--- a/plants.html
+++ b/plants.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
+
+
+
+
+    <footer>
+        <form>
+            <h5>Sign up for our Weekly NewsLetter</h5>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last Name:</label><br>
+            <input type="text" id="lname" name="lname"><br>
+        </form>
+        
+        <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
+        <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
+        <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+    </footer> 
     
 </body>
 </html>
