add images to scholling and bottom dwelling fish

--- a/fish.html
+++ b/fish.html
@@ -64,7 +64,7 @@
     </tr>
 </table>
 
-    <h2>Schooling Fish</h2>
+    <h1>Schooling Fish</h1>
 
     <h2>Rummy Nose Tetra</h2>
 <img src="..assets/images/Rummy Nose tetra.jpg" alt="Rummy Nose Tetra Fish">
@@ -132,12 +132,86 @@
 </tr>
 <tr>
    <td>10 gallons</td>
-   <td>23–29 C</td>
+   <td>23°C–29°C</td>
    <td>Peaceful</td>
    <td>Omnivore</td>
 </tr>
 </table>
 
+<h1>Bottom Dwelling Fish</h1>
+
+<h2>Bronze Corydoras</h2>
+<img src="..assets/images/Bronze corydors.jpg" alt="Bronze Corydora catfish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>10 gallons</td>
+   <td>22°C–26°C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
+
+<h2>Panda Corydoras</h2>
+<img src="..assets/images/panda-corydoras.jpg" alt="Panda Corydora catfish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>10 gallons</td>
+   <td>22°C–27°C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
+
+
+<h2>Kuhli Loach</h2>
+<img src="..assets/images/kuhli-loach.jpg" alt="Kuhli Loach Fish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>20 gallons</td>
+   <td>24°C-29°C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
+
+<h2>Hillstream Loach</h2>
+<img src="..assets/images/Hillstream Loach.jpg" alt="Hillstream Loach Fish">
+
+<table>
+<tr>
+   <th>Tank Size</th>
+   <th>Water temperature</th>
+   <th>Temperament</th>
+   <th>Diet</th>
+</tr>
+<tr>
+   <td>10 gallons</td>
+   <td>23°C–29°C</td>
+   <td>Peaceful</td>
+   <td>Omnivore</td>
+</tr>
+</table>
 
     <footer>
         <form>
