add intro to plants

--- a/plants.html
+++ b/plants.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-
+<h1>Plants</h1>
+<p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the water.</p>
 
 
 
