add content to plant section

--- a/fish.html
+++ b/fish.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<header>
+    <h1 id="Title">Keeping Fish Simple</h1>                   
+    <nav>
+        <ul id="menu">
+            <li><a href="plants.html">Plants</a></li>                
+            <li><a href="fish.html">Fish</a></li>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>          
+</header>
+
 <body>
     <h1>Choosing your fish</h1>
     <p>
@@ -220,6 +232,8 @@
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
+            <input type="submit" value="Sign Up">
+
         </form>
         <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
         <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
