--- a/index.html
+++ b/index.html
@@ -35,36 +35,36 @@
         <p>When starting your fish keeping hobby, there are a few things to consider when  beginning your journey. In this section we will go over what you need to start and some things you need to think about before making a purchase.</p>
         
         <div>
-            <h2>Location, Location, Location</h2>
+            <h3>Location, Location, Location</h3>
             <p>Picking a location for your aquarium is more important than you think. Try not to have it beside windows or heating or aircon vents. As this will cause algae blooms with the light and temperature fluctuations with the heat and aircon vents</p>
         </div>
         <div>
-            <h2>Cleaning/Maintence equipment</h2>
+            <h3>Cleaning/Maintence equipment</h3>
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
         <div>
-            <h2>Tank (bigger is better)</h2>
+            <h3>Tank (bigger is better)</h3>
             <p>Despite what you might think, having a bigger aquarium is easier to care for than smaller one. The more volume of water you have, the easier it is to maintain and balance your aquarium environment. We recommend at least 20 gallons (75 litters)</p>
         </div>
         <div>
-            <h2>Filter</h2>
+            <h3>Filter</h3>
             <p>The filter is an important part of keeping a healthy aquarium. This will help clean your water and filter out the fish waste and debris. We recommend either a hang on back filter or internal filter. Just make sure that whichever filter you choose that it is sufficient enough to deal with the volume of water you have in your aquarium.</p>
         </div>
         <div>
-            <h2>Heater and Thermometer</h2>
+            <h3>Heater and Thermometer</h3>
             <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a heater. It’s also advise to have a thermometer, this will help you keep track on the temperature of the water.</p>
         </div>
         <div>
-            <h2>Lighting</h2>
+            <h3>Lighting</h3>
             <p>If your aquarium comes with a built in light, that's great! Just remember to have your light on between 8-12 hours per day. Once you get more comfortable with your aquarium, maybe think of upgrading your light. Now you can get lights with timers and adjustable lighting.</p>
         </div>
         <div>
-            <h2>Substrate</h2>
+            <h3>Substrate</h3>
             <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great place for beneficial bacteria to live, it also makes you aquarium look more aesthetically pleasing.</p>
         </div>
     </section>
     <section>
-        <h2>Nitrogen Cycle</h2>
+        <h3>Nitrogen Cycle</h3>
         <p>The Nitrogen Cyccle is a very importnat part when starting your aquarium. The basics of the Nitrogen Cycle is the procees where the ammonia (which is extremely toxic to fish) produced from fish waste and uneaten food is broken dowen to Nitrite and further again to Nitrates (which is removed with water changes)</p>
         <div>Nitrogen Cycle Image</div>
         <p>Pro tip, to test the water we recommend getting <a href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
@@ -79,7 +79,9 @@
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
+            <input type="submit" value="Sign Up">
         </form>
+        
         <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
         <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
         <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
