--- a/plants.html
+++ b/plants.html
@@ -6,11 +6,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<header>
+    <h1 id="Title">Keeping Fish Simple</h1>                   
+    <nav>
+        <ul id="menu">
+            <li><a href="plants.html">Plants</a></li>                
+            <li><a href="fish.html">Fish</a></li>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>          
+</header>
+
 <body>
 <h1>Plants</h1>
 <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the water.</p>
 
 <h2>Plants for Beginners</h2>
+
+<h3>Annubias</h3>
+<table>
+    <thead>
+        <tr>
+            <th>Category</th>
+            <th>Rating</th>
+        </tr>
+    <tbody>
+        <tr>
+            <td>Care Level</td>
+            <td>Easy</td>
+        </tr>
+        <tr>
+            <td>Placement</td>
+            <td>Foreground</td>
+        </tr>
+        <tr>
+            <td>Lighting</td>
+            <td>Low-Moderate</td>
+        </tr>
+        <tr>
+            <td>Water temperature</td>
+            <td>22-27</td>
+        </tr>
+    </tbody>
+    </thead>
+</table>
+
+<h3>Java Fern</h3>
+<table>
+    <thead>
+        <tr>
+            <th>Category</th>
+            <th>Rating</th>
+        </tr>
+    <tbody>
+        <tr>
+            <td>Care Level</td>
+            <td>Easy</td>
+        </tr>
+        <tr>
+            <td>Placement</td>
+            <td>Mid to Background</td>
+        </tr>
+        <tr>
+            <td>Lighting</td>
+            <td>Low-Moderate</td>
+        </tr>
+        <tr>
+            <td>Water temperature</td>
+            <td>20-27</td>
+        </tr>
+    </tbody>
+    </thead>
+</table>
+
+<h3>Dwarf Sagittaria</h3>
+<table>
+    <thead>
+        <tr>
+            <th>Category</th>
+            <th>Rating</th>
+        </tr>
+    <tbody>
+        <tr>
+            <td>Care Level</td>
+            <td>Easy</td>
+        </tr>
+        <tr>
+            <td>Placement</td>
+            <td>Mid ground</td>
+        </tr>
+        <tr>
+            <td>Lighting</td>
+            <td>Low-Moderate</td>
+        </tr>
+        <tr>
+            <td>Water temperature</td>
+            <td>20-27</td>
+        </tr>
+    </tbody>
+    </thead>
+</table>
+
+<h3>Cryptocoryne</h3>
+<table>
+    <thead>
+        <tr>
+            <th>Category</th>
+            <th>Rating</th>
+        </tr>
+    <tbody>
+        <tr>
+            <td>Care Level</td>
+            <td>Easy</td>
+        </tr>
+        <tr>
+            <td>Placement</td>
+            <td>Mid ground</td>
+        </tr>
+        <tr>
+            <td>Lighting</td>
+            <td>Low-Moderate</td>
+        </tr>
+        <tr>
+            <td>Water temperature</td>
+            <td>20-26</td>
+        </tr>
+    </tbody>
+    </thead>
+</table>
 
 
     <footer>
@@ -20,6 +144,8 @@
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
+            <input type="submit" value="Sign Up">
+
         </form>
         
         <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
