add images for plants and started css on home page

--- a/fish.html
+++ b/fish.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Keeping Fish Simple</title>
+
     <title>Document</title>
 </head>
 
@@ -25,8 +28,8 @@
     </p>
     
     <h1>Center Piece Fish</h1>
-    <h2>Angelfish</h2>
-    <img src="..assets/images/Angelfish.jpg" alt="Angelfish">
+    <h2 class="angelfish">Angelfish</h2>
+    <img src='../assets/images/Angelfish.jpg' alt="Angelfish">
     <table>
         <tr>
             <th>Tank Size</th>
@@ -43,7 +46,7 @@
     </table>
 
     <h2>Honey Gourami</h2>
-<img src="..assets/images/Honey Gourami.jpg" alt="Honey Gourami fish">
+<img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
     <table>
     <tr>
         <th>Tank Size</th>
@@ -60,7 +63,7 @@
 </table>
 
 <h2>Betta</h2>
-<img src="..assets/images/Betta.jpg" alt="Betta fish">
+<img src='../assets/images/Betta.jpg' alt="Betta fish">
 <table>
     <tr>
         <th>Tank Size</th>
@@ -79,7 +82,7 @@
     <h1>Schooling Fish</h1>
 
     <h2>Rummy Nose Tetra</h2>
-<img src="..assets/images/Rummy Nose tetra.jpg" alt="Rummy Nose Tetra Fish">
+<img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
 <table>
     <tr>
         <th>Tank Size</th>
@@ -97,7 +100,7 @@
 </table>
 
     <h2>Cherry Barb</h2>
- <img src="..assets/images/Cherry Barb.jpg" alt="Cherry Barb Fish">
+ <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
 
 <table>
 <tr>
@@ -115,7 +118,7 @@
 </table>
 
 <h2>Ember Tetra</h2>
-<img src="..assets/images/Ember tetra.jpg" alt="Ember Tetra fish">
+<img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
 
 <table>
 <tr>
@@ -133,7 +136,7 @@
 </table>
 
 <h2>Neon Tetra</h2>
-<img src="..assets/images/Neon Tetra.jpg" alt="Neon Tetra Fish">
+<img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish">
 
 <table>
 <tr>
@@ -153,7 +156,7 @@
 <h1>Bottom Dwelling Fish</h1>
 
 <h2>Bronze Corydoras</h2>
-<img src="..assets/images/Bronze corydors.jpg" alt="Bronze Corydora catfish">
+<img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish">
 
 <table>
 <tr>
@@ -171,7 +174,7 @@
 </table>
 
 <h2>Panda Corydoras</h2>
-<img src="..assets/images/panda-corydoras.jpg" alt="Panda Corydora catfish">
+<img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish">
 
 <table>
 <tr>
@@ -190,7 +193,7 @@
 
 
 <h2>Kuhli Loach</h2>
-<img src="..assets/images/kuhli-loach.jpg" alt="Kuhli Loach Fish">
+<img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish">
 
 <table>
 <tr>
@@ -208,7 +211,7 @@
 </table>
 
 <h2>Hillstream Loach</h2>
-<img src="..assets/images/Hillstream Loach.jpg" alt="Hillstream Loach Fish">
+<img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish">
 
 <table>
 <tr>
