--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="fish.html">Fish</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
-        </nav>          
+        </nav>
+        <img src='../assets/images/Header-image.jpg' alt="Picture of tweo angel fish">     
     </header>
 
     <section>
@@ -64,7 +65,7 @@
         </div>
     </section>
     <section>
-        <h3>Nitrogen Cycle</h3>
+        <h2>Nitrogen Cycle</h2>
         <p>The Nitrogen Cyccle is a very importnat part when starting your aquarium. The basics of the Nitrogen Cycle is the procees where the ammonia (which is extremely toxic to fish) produced from fish waste and uneaten food is broken dowen to Nitrite and further again to Nitrates (which is removed with water changes)</p>
         <div>Nitrogen Cycle Image</div>
         <p>Pro tip, to test the water we recommend getting <a href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
