--- a/plants.html
+++ b/plants.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Keeping Fish Simple</title>
+
     <title>Document</title>
 </head>
 
@@ -24,7 +27,8 @@
 
 <h2>Plants for Beginners</h2>
 
-<h3>Annubias</h3>
+<h3>Anubias</h3>
+<img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant">
 <table>
     <thead>
         <tr>
@@ -53,6 +57,7 @@
 </table>
 
 <h3>Java Fern</h3>
+<img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant">
 <table>
     <thead>
         <tr>
@@ -80,7 +85,8 @@
     </thead>
 </table>
 
-<h3>Dwarf Sagittaria</h3>
+<h3>Amazon Sword</h3>
+<img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant">
 <table>
     <thead>
         <tr>
@@ -94,7 +100,7 @@
         </tr>
         <tr>
             <td>Placement</td>
-            <td>Mid ground</td>
+            <td>Background</td>
         </tr>
         <tr>
             <td>Lighting</td>
@@ -109,6 +115,7 @@
 </table>
 
 <h3>Cryptocoryne</h3>
+<img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant">
 <table>
     <thead>
         <tr>
