fized layout issues

--- a/fish.html
+++ b/fish.html
@@ -10,27 +10,30 @@
     <title>Document</title>
 </head>
 
-<header>
-    <h1 id="Title">Keeping Fish Simple</h1>                   
-    <nav>
-        <ul id="menu">
-            <li><a href="plants.html">Plants</a></li>                
-            <li><a href="fish.html">Fish</a></li>
-            <li><a href="index.html">Home</a></li>
-        </ul>
-    </nav>          
-</header>
 
 <body>
+
+    <header>
+        <h1 id="Title">Keeping Fish Simple</h1>                   
+        <nav>
+            <ul id="menu">
+                <li><a href="plants.html">Plants</a></li>                
+                <li><a href="fish.html">Fish</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>          
+    </header>
+    
     <h1>Choosing your fish</h1>
     <p>
         Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can live peacefully together. To help you through this selction process, we have set out a list of fish that we think is great for begginers.
     </p>
     
-    <h1>Center Piece Fish</h1>
-    <h2 class="angelfish">Angelfish</h2>
-    <img src='../assets/images/Angelfish.jpg' alt="Angelfish">
-    <table>
+    <section>
+        <h1>Center Piece Fish</h1>
+        <h2 class="angelfish">Angelfish</h2>
+        <img src='../assets/images/Angelfish.jpg' alt="Angelfish">
+        <table>
         <tr>
             <th>Tank Size</th>
             <th>Water temperature</th>
@@ -43,10 +46,12 @@
             <td>Semi-Aggressive</td>
             <td>Omnivore</td>
         </tr>
-    </table>
+        </table>
+    </section>
 
+<section>
     <h2>Honey Gourami</h2>
-<img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
+    <img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
     <table>
     <tr>
         <th>Tank Size</th>
@@ -60,11 +65,13 @@
         <td>Peaceful</td>
         <td>Omnivore</td>
     </tr>
-</table>
+    </table>
+</section>
 
-<h2>Betta</h2>
-<img src='../assets/images/Betta.jpg' alt="Betta fish">
-<table>
+<section>
+    <h2>Betta</h2>
+    <img src='../assets/images/Betta.jpg' alt="Betta fish">
+    <table>
     <tr>
         <th>Tank Size</th>
         <th>Water temperature</th>
@@ -77,13 +84,15 @@
         <td>Semi-Aggressive</td>
         <td>Carnivore</td>
     </tr>
-</table>
+    </table>
+</section>
 
     <h1>Schooling Fish</h1>
 
+<section>
     <h2>Rummy Nose Tetra</h2>
-<img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
-<table>
+    <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
+    <table>
     <tr>
         <th>Tank Size</th>
         <th>Water temperature</th>
@@ -96,45 +105,50 @@
         <td>Peaceful</td>
         <td>Omnivore</td>
     </tr>
+    </table>
+</section>
 
-</table>
-
+<section>
     <h2>Cherry Barb</h2>
- <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
+    <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
 
-<table>
-<tr>
-    <th>Tank Size</th>
-    <th>Water temperature</th>
-    <th>Temperament</th>
-    <th>Diet</th>
-</tr>
-<tr>
-    <td>20 gallons</td>
-    <td>23°C-26°C</td>
-    <td>Peaceful</td>
-    <td>Omnivore</td>
-</tr>
-</table>
+    <table>
+    <tr>
+        <th>Tank Size</th>
+        <th>Water temperature</th>
+        <th>Temperament</th>
+        <th>Diet</th>
+    </tr>
+    <tr>
+        <td>20 gallons</td>
+        <td>23°C-26°C</td>
+        <td>Peaceful</td>
+        <td>Omnivore</td>
+    </tr>
+    </table>
+</section>
 
-<h2>Ember Tetra</h2>
-<img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
+<section>
+    <h2>Ember Tetra</h2>
+    <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
 
-<table>
-<tr>
+    <table>
+    <tr>
    <th>Tank Size</th>
    <th>Water temperature</th>
    <th>Temperament</th>
    <th>Diet</th>
-</tr>
-<tr>
-   <td>10 gallons</td>
-   <td>23°C-26°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
+    </tr>
+    <tr>    
+    <td>10 gallons</td>
+    <td>23°C-26°C</td>
+    <td>Peaceful</td>
+    <td>Omnivore</td>
+    </tr>
+    </table>
+</section>
 
+<section>
 <h2>Neon Tetra</h2>
 <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish">
 
@@ -152,9 +166,11 @@
    <td>Omnivore</td>
 </tr>
 </table>
+</section>
 
 <h1>Bottom Dwelling Fish</h1>
 
+<section>
 <h2>Bronze Corydoras</h2>
 <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish">
 
@@ -172,7 +188,9 @@
    <td>Omnivore</td>
 </tr>
 </table>
+</section>
 
+<section>
 <h2>Panda Corydoras</h2>
 <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish">
 
@@ -190,8 +208,9 @@
    <td>Omnivore</td>
 </tr>
 </table>
+</section>
 
-
+<section>
 <h2>Kuhli Loach</h2>
 <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish">
 
@@ -209,7 +228,9 @@
    <td>Omnivore</td>
 </tr>
 </table>
+</section>
 
+<section>
 <h2>Hillstream Loach</h2>
 <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish">
 
@@ -227,6 +248,7 @@
    <td>Omnivore</td>
 </tr>
 </table>
+</section>
 
     <footer>
         <form>
