--- a/plants.html
+++ b/plants.html
@@ -10,23 +10,23 @@
     <title>Document</title>
 </head>
 
-<header>
-    <h1 id="Title">Keeping Fish Simple</h1>                   
-    <nav>
-        <ul id="menu">
-            <li><a href="plants.html">Plants</a></li>                
-            <li><a href="fish.html">Fish</a></li>
-            <li><a href="index.html">Home</a></li>
-        </ul>
-    </nav>          
-</header>
-
 <body>
+    <header>
+        <h1 id="Title">Keeping Fish Simple</h1>                   
+        <nav>
+            <ul id="menu">
+                <li><a href="plants.html">Plants</a></li>                
+                <li><a href="fish.html">Fish</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>          
+    </header>        
 <h1>Plants</h1>
 <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the water.</p>
 
 <h2>Plants for Beginners</h2>
 
+<section>
 <h3>Anubias</h3>
 <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant">
 <table>
@@ -55,7 +55,9 @@
     </tbody>
     </thead>
 </table>
+</section>
 
+<section>
 <h3>Java Fern</h3>
 <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant">
 <table>
@@ -84,7 +86,9 @@
     </tbody>
     </thead>
 </table>
+</section>
 
+<section>
 <h3>Amazon Sword</h3>
 <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant">
 <table>
@@ -113,7 +117,9 @@
     </tbody>
     </thead>
 </table>
+</section>
 
+<section>
 <h3>Cryptocoryne</h3>
 <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant">
 <table>
@@ -142,7 +148,7 @@
     </tbody>
     </thead>
 </table>
-
+</section>
 
     <footer>
         <form>
